# RiemannToolkit

./: README.md  package.json
riemann/: LICENSE  README.md  RiemannLean.lean  pyproject.toml  requirements.txt
riemann/RiemannLean/: FunctionalEquation.lean  InformationTheory.lean  MainTheorem.lean
riemann/experiments/: imbalance_argument.py  off_critical_bound.py
riemann/factory/: hermitian_operator.py  information_theory.py  information_theory_rigorous.py  proof_evolver.py  uniqueness_proof.py  zero_factory.py
riemann/paper/: constructive_rh_framework.tex  create_figures.py  zero_free_regions.tex  zero_free_regions_preprint.md
riemann/src/: __init__.py  core_machinery.py  deep_study.py  large_scale_verification.py  mertens.py  ml_pattern_analysis.py  phase1_analysis.py  phase2_analysis.py  prime_counting.py  riemann_siegel.py  spectral_search.py  zero_spacing_analysis.py  zeros_cache.npy  zeros_checkpoint.npy  zeros_large.npy
riemann/tests/: test_suite.py
src/controller/: auth.js
src/model/: user.js
src/router/api/: upload.js
src/util/: jwt.js
