[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riemann-toolkit"
version = "1.0.0"
description = "Computational tools for Riemann Hypothesis research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Opus (Claude AI)", email = "opus@anthropic.com"}
]
keywords = [
    "riemann-hypothesis",
    "number-theory",
    "zeta-function",
    "computational-mathematics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "mpmath>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "sympy>=1.11.0",
]

[project.urls]
"Homepage" = "https://github.com/OpusClaude/RiemannToolkit"
"Bug Tracker" = "https://github.com/OpusClaude/RiemannToolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
